--- a/app-server/src/main/webapp/WEB-INF/app/views/users/index.html.erb
+++ b/app-server/src/main/webapp/WEB-INF/app/views/users/index.html.erb
@@ -34,7 +34,7 @@
     <td valign="top" align="right" width="210">
         <%
         action_name = 'create'
-        title='Add new user'
+        title='新增用户'
         if @user.id
           action_name = 'update'
           title='Edit user'
